fix overflowing URLs

--- a/static/css/lista.css
+++ b/static/css/lista.css
@@ -24,4 +24,5 @@
 
 .event p {
     font-size: 16px;
+    word-wrap: break-word;
 }
